Fix desktop menu alignment.

--- a/test.css
+++ b/test.css
@@ -19,15 +19,28 @@ body {
 }
 
 .nav-bar {
-  background: #fff;
-  color: #007bff;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-items: center;
+  padding-left: 160px;
+  background-color: #fff;
 }
 
-.nav-bar .myMenu {
-  display: flex;
-  list-style: none;
+.nav-bar .myMenu .nav-list {
+  list-style-type: none;
+  width: 100%;
+  text-align: center;
+}
+
+.nav-list li {
+  display: inline-block;
+  padding: 10px;
+  color: black;
+}
+
+.nav-bar .logo a {
+  color: #6070ff;
+  text-decoration: none;
 }
 
 .nav-bar .myMenu li a {
@@ -35,8 +48,8 @@ body {
   padding: 15px;
   text-decoration: none;
   text-transform: capitalize;
-  color: #007bff;
-  font-size: 1.5rem;
+  color: #6070ff;
+  font-size: 18px;
 }
 
 .nav-bar .myMenu li a:hover {
@@ -44,30 +57,26 @@ body {
 }
 
 .nav-bar .openMenu {
-  font-size: 2rem;
-  margin: 20px;
+  font-size: 20px;
+  margin: 15px;
   display: none;
   cursor: pointer;
+  color: #6070ff;
 }
 
 .nav-bar .myMenu .closeMenu,
 .icons i {
-  font-size: 2rem;
+  font-size: 24px;
   display: none;
   cursor: pointer;
-  color: white;
+  color: #fff;
 }
 
 .nav-bar .logo {
-  width: 180px;
-  font-size: 1.8rem;
-  font-weight: 700;
-  color: #6070ff;
-}
-
-.nav-bar .logo:hover {
-  transition-duration: 1s;
-  transform: rotate(360deg);
+  margin: 15px;
+  font-size: 18px;
+  line-height: 20px;
+  cursor: pointer;
 }
 
 .headlines {
@@ -137,78 +146,6 @@ a.btn-connect {
     overflow-x: hidden;
   }
 
-  .stacks li {
-    list-style: none;
-    border-bottom: 2px solid #f7f7f9;
-  }
-
-  .stacks li a {
-    padding: 10px;
-    text-decoration: none;
-    color: black;
-  }
-
-  .nav-bar {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding-left: 160px;
-    background-color: #fff;
-  }
-
-  .nav-bar .myMenu .nav-list {
-    list-style-type: none;
-    width: 100%;
-    text-align: center;
-  }
-
-  .nav-list li {
-    display: inline-block;
-    padding: 10px;
-    color: black;
-  }
-
-  .nav-bar .logo a {
-    color: #6070ff;
-    text-decoration: none;
-  }
-
-  .nav-bar .myMenu li a {
-    display: inline-block;
-    padding: 15px;
-    text-decoration: none;
-    text-transform: capitalize;
-    color: #344563;
-    font-size: 18px;
-  }
-
-  .nav-bar .myMenu li a:hover {
-    background: rgb(255, 94, 0);
-  }
-
-  .nav-bar .openMenu {
-    font-size: 20px;
-    margin: 15px;
-    display: none;
-    cursor: pointer;
-    color: #6070ff;
-  }
-
-  .nav-bar .myMenu .closeMenu,
-  .icons i {
-    font-size: 24px;
-    display: none;
-    cursor: pointer;
-    color: #fff;
-  }
-
-  .nav-bar .logo {
-    margin: 15px;
-    font-size: 18px;
-    line-height: 20px;
-    cursor: pointer;
-  }
-
   .project {
     border: 2px solid #e5e5e5;
     background: #fff;
@@ -227,6 +164,17 @@ a.btn-connect {
     width: 145px;
     height: 150px;
     border-radius: 8px;
+  }
+
+  .stacks li {
+    list-style: none;
+    border-bottom: 2px solid #f7f7f9;
+  }
+
+  .stacks li a {
+    padding: 10px;
+    text-decoration: none;
+    color: black;
   }
 
   .work-info ul {
@@ -485,32 +433,6 @@ a.btn-connect {
 
   .contact button :active {
     color: purple;
-  }
-
-  /* Style for Pair elements */
-  .work-section .project:nth-child(2n) {
-    background-color: white;
-    display: flex;
-    flex-direction: row-reverse;
-  }
-
-  .work-section .project:nth-child(2n) img {
-    background-color: transparent;
-    width: 490px;
-  }
-
-  .work-section .project:nth-child(2n) .details {
-    background-color: transparent;
-  }
-
-  /* style for impair elements */
-  .work-section .project:nth-child(2n+1) img {
-    background-color: transparent;
-    width: 490px;
-  }
-
-  .work-section .project:nth-child(2n+1) .details {
-    background-color: transparent;
   }
 }
 
